syntax = "proto3";

// specify package for generated java classes
option java_package = "com.exercise.springjava.grpc";

service DemoTest {
  rpc Unary(DemoRequest) returns (DemoResponse) {}
  rpc ServerSideStreaming(DemoRequest) returns (stream DemoResponse) {}
  rpc ClientSideSteraming(stream DemoRequest) returns (DemoResponse) {}
  rpc BidirectionalStreaming(stream DemoRequest) returns (stream DemoResponse) {}
}

message DemoRequest {
  string id = 1;
  string timestamp = 2;
}

message DemoResponse {
  string id = 1;
  string timestamp = 2;
}
